# learn-claude-code-deepseek

./: .env.example  .gitignore  main.py  pyproject.toml
agents/: client.py  s01_agent_loop.py  s01_agent_loop_compare.py  s02_tool_use.py  s03_todo_write.py  s04_subagent.py  s05_skill_loading.py  s06_context_compact.py  s06_test.py  s07_task_system.py  s08_background_tasks.py  s09_agent_teams.py
demo/: minimal_agent_chat.py
demo/static/: chat.html
playground/: buggy_script.py
